Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -834,7 +834,7 @@
  }
 
  /* ---------- Small Devices (Tablets 576px–767px) ---------- */
- @media (min-width: 577px) and (max-width: 1401px) {
+ @media (min-width: 576px) and (max-width: 767px) {
 
      h1 {
          font-size: 36px !important;
@@ -892,7 +892,7 @@
  }
 
  /* ---------- Medium Devices (Tablets Landscape / Small Laptops 768px–991px) ---------- */
- @media(min-width: 1402px) {
+ @media(min-width: 768px) and (max-width: 991px) {
 
      h1 {
          font-size: 42px !important;
